First attempt at integrating Stormpath and Angular example into a JHipster app.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,8 +38,8 @@
       <div ui-view=""></div>
     </div>
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="webjars/angular/angular.js"></script>
+    <script src="webjars/angular-ui-router/angular-ui-router.js"></script>
     <script src="webjars/stormpath-sdk-angularjs/stormpath-sdk-angularjs.js"></script>
     <script src="webjars/stormpath-sdk-angularjs/stormpath-sdk-angularjs.tpls.js"></script>
     <script src="app.js"></script>
