--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
+    <link rel="stylesheet" href="content/css/stormpath.css">
     <!-- endbuild -->
 </head>
 <body ng-app="stormtrooperApp" ng-strict-di>
