Improvements after testing with Stormpath Angular SDK with its support for data.authorities
https://github.com/stormpath/stormpath-sdk-angularjs/issues/190

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -104,6 +104,7 @@
     <script src="app/components/util/base64.service.js"></script>
     <script src="app/components/login/login.service.js"></script>
     <script src="app/components/login/login.controller.js"></script>
+    <script src="app/components/login/login.state.js"></script>
     <script src="app/components/language/language.service.js"></script>
     <script src="app/components/language/language.filter.js"></script>
     <script src="app/components/language/language.controller.js"></script>
