--- a/src/main/webapp/app/account/forgot-password/forgot-password.html
+++ b/src/main/webapp/app/account/forgot-password/forgot-password.html
@@ -1,8 +1,6 @@
-<div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <h1 data-translate="reset.request.title">Reset your password</h1>
-
-        <div class="form-forgot-password"
-             sp-password-reset-request-form template-url="app/stormpath/password-reset.tpl.html"></div>
+<div class="container">
+    <div class="row">
+        <h3>Forgot Password</h3>
     </div>
+    <div sp-password-reset-request-form template-url="app/stormpath/password-reset.tpl.html"></div>
 </div>
